# urc-Espresso-2026

./: .covrc  .flake8  .gitignore  .mypy.ini  .pre-commit-config.yaml  CODE_QUALITY.md  MAINTENANCE.md  MOBILENET_IMX500_GUIDE.md  Makefile  QUICK_START.md  README.md  RETRAINING_GUIDE.md  SETUP.md  TESTING.md  __init__.py  activate_env.sh  compare_fp32_int8_accuracy.py  config.py  data_analysis.py  data_utils.py  detector.py  efficientnet.py  evaluator.py  files_to_remove.txt  malaysia@10.0.0.244  mobilevit.py  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt  retrain_confidence_cpu.sh  run_comparison.py  run_live_inference.sh  run_training_pipeline.py  setup_dev.py  test_temporal_filter.py  train_all_models.bat  train_all_parallel.ps1  trainer.py  training_complete_log.txt  (+4 more)
.github/workflows/: tests.yml
cli/: __init__.py  convert.py  evaluate.py  train.py
configs/: default.yaml  efficientnet_confidence.yaml  embedded.yaml  mobilenet_160.yaml  mobilenet_192.yaml  mobilenet_224.yaml  mobilenet_confidence.yaml  mobilenetv2_classification.yaml  robotics.yaml  yolov8l_confidence.yaml  yolov8m_confidence.yaml  yolov8n_160.yaml  yolov8n_192.yaml  yolov8n_224.yaml  yolov8s_cbam_confidence.yaml  yolov8s_confidence.yaml
configs/environments/: embedded.yaml
core/: __init__.py  classification_trainer.py  trainer.py
core/config/: __init__.py  manager.py
core/data/: __init__.py
core/evaluation/: __init__.py
core/models/: __init__.py  detector.py  onnx_detector.py
deployment_package/: README.md  install.sh  raspberry_pi_setup.sh  requirements_pi.txt  yolo-detector.service
deployment_package/config/: alert_config.json  service_config.json
deployment_package/scripts/: alert_manager.py  detector_service.py  listen_detections.py  ros2_listener.py
docs/: DEPLOYMENT_GUIDE.md  README.md  STRUCTURE.md  WEBCAM_TEST_README.md
pipeline/: __init__.py  base.py
pipeline/conversion/: __init__.py  pipeline.py
pipeline/deployment/: __init__.py  pipeline.py
pipeline/evaluation/: __init__.py  pipeline.py
pipeline/training/: __init__.py  pipeline.py
ros2_ws/src/hammer_detection/hammer_detection/: camera_detector.py  detector_node.py  temporal_filter.py
ros2_ws/src/object_detection/: __init__.py  camera_detector.py  setup.py
ros2_ws/src/object_detection/hammer_detection/: package.xml
ros2_ws/src/object_detection/hammer_detection/object_detection/: detector_node.py
ros_nodes/: BENCHMARK_GUIDE.md  README.md  STRUCTURE.md  __init__.py  camera_detector_node.py  camera_publisher.py  realsense_bridge.py  test_setup.py
ros_nodes/cameras/pc/camera_subscriber/: camera_subscriber.py  multi_camera_subscriber.launch.py
ros_nodes/cameras/pi_zero_2_w/ai_camera_publisher/: ai_camera_detector_node.py  aruco_detector.py  camera_detector.launch.py  ml_inference.py  temporal_smoother.py  visualization.py
ros_nodes/cameras/pi_zero_2_w/camera_publisher/: camera_publisher.py  camera_publisher_node.py
ros_nodes/components/: __init__.py  detection_merger.py  image_preprocessor.py  motion_tracker.py
ros_nodes/configs/pc/: camera_subscriber_config.yaml
ros_nodes/configs/pi_zero_ai/: camera_config_ai.yaml
ros_nodes/configs/pi_zero_v21/: camera_config_pi1.yaml  camera_config_pi2.yaml  camera_config_pi3.yaml
ros_nodes/configs/templates/: camera_config_template.yaml
ros_nodes/utils/: setup_pi.sh
ros_nodes/zenoh/: INSTALL_ZENOH.md  ZENOH_VS_CYCLONEDDS.md
ros_nodes/zenoh/benchmarks/: __init__.py  benchmark_camera_streaming.py  benchmark_compression.sh  benchmark_data_packets.py  data_packet_publisher.py  run_middleware_benchmark.sh  view_benchmark_history.py
rpi_conversion/: convert_to_rpk.py
scripts/: README.md  README_PI5_STREAM.md  __init__.py  analyze_memory.py  analyze_tradeoffs.py  benchmark_all_models.py  benchmark_models.py  compare_model_accuracy.py  convert_all_models.py  convert_to_imx500.py  convert_to_onnx.py  copy_selected_models.py  dataset_utils.py  end_to_end_test.py  evaluate.py  evaluate_onnx_accuracy.py  evaluate_onnx_model.py  evaluate_per_class_accuracy.py  extract_per_class_accuracy.py  final_benchmark_report.py  general_utils.py  generate_final_report.py  monitor_training.py  optimize_rover_models.py  prepare_training_data.py  quantize_models.py  quantize_onnx_models.py  quick_test.py  requirements_pi5.txt  setup_webcam_test.py  show_benchmark_summary.py  simple_benchmark.py  simple_model_conversion_and_benchmark.py  stream_detection_pi5.py  test_classification_model.py  test_temporal_filter.py  train.py  train_accuracy_focused.py  train_all_models_complete.py  train_all_models_from_scratch.py  (+6 more)
scripts/config/: training_config_generator.py
scripts/training/: run_training_pipeline.py  train_and_deploy.py  trainer.py
src/core/: config.py  detector.py  evaluator.py  trainer.py
src/utils/: metrics.py
tests/: README.md  __init__.py  conftest.py
tests/e2e/: __init__.py  test_complete_pipeline.py
tests/integration/: __init__.py  test_device_workflow.py  test_onnx_conversion.py  test_training_workflow.py
tests/unit/: __init__.py  test_detection_utils.py  test_detector.py  test_detector_enhanced.py  test_device_consistency.py  test_metrics.py  test_pipeline_architecture.py  test_trainer.py
tests/utils/: test_logging.py
utils/: __init__.py  config.py  data_utils.py  detection_utils.py  device_utils.py  logger_config.py  metrics.py  output_utils.py  visualization.py
